# TCC

cofre_iot-main - Copia/: sdkconfig
cofre_iot-main - Copia/components/hcf_adc/: CMakeLists.txt  hcf_adc.c  hcf_adc.h
cofre_iot-main - Copia/main/: CMakeLists.txt  app_main.c
